// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HOC withTooltip Tag, tooltip with a card 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: absolute;
  z-index: 1000;
  top: 15px;
  left: 0;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
}

.c4:after,
.c4:before {
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c4:before {
  bottom: 100%;
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c4:after {
  bottom: calc(100% - 1px);
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c5 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    type="SECONDARY"
  >
    This a tag with tooltip
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          overflow="hidden"
          width="100%"
        >
          This is a Card 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Tag, tooltip with text 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: absolute;
  z-index: 1000;
  top: 15px;
  left: 0;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
}

.c4:after,
.c4:before {
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c4:before {
  bottom: 100%;
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c4:after {
  bottom: calc(100% - 1px);
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  padding-right: 8px;
}

.c1 .close-icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c1:hover .close-icon,
.c1:focus .close-icon {
  color: white;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    type="SECONDARY"
  >
    This a tag with tooltip
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Tooltip custom text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Text, tooltip disabled 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: absolute;
  z-index: 1000;
  top: 15px;
  left: 0;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
}

.c4:after,
.c4:before {
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c4:before {
  bottom: 100%;
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c4:after {
  bottom: calc(100% - 1px);
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={18}
    type="#2f313a"
  >
    Farmblocks-text
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Tooltip custom text
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HOC withTooltip Text, tooltip with text 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: absolute;
  z-index: 1000;
  top: 15px;
  left: 0;
}

.c4 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
}

.c4:after,
.c4:before {
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c4:before {
  bottom: 100%;
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c4:after {
  bottom: calc(100% - 1px);
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <div
    className="c1"
    size={18}
    type="#2f313a"
  >
    Farmblocks-text
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Tooltip custom text
      </div>
    </div>
  </div>
</div>
`;
